Refactor swagger and mapping
