# internal/http/post.go
@@ -1,11 +1,20 @@
 package http
 
 import (
+	"encoding/json"
 	"fmt"
 	"github.com/dhnikolas/state-manager/internal/dto"
 	"github.com/go-chi/chi/v5"
 	"net/http"
 )
+
+type CreateResourceRequest struct {
+	ShardID     string            `json:"shard_id" validate:"required"`
+	Labels      map[string]string `json:"labels"`
+	Annotations map[string]string `json:"annotations"`
+	Name        string            `json:"name" validate:"required"`
+	Spec        json.RawMessage   `json:"spec"`
+}
 
 // createResource создаёт новый ресурс
 // @Summary Create a new resource
@@ -16,27 +25,38 @@ import (
 // @Param resource_group path string true "Resource Group" example="group1"
 // @Param kind path string true "Kind" example="type1"
 // @Param namespace path string true "Namespace" example="ns1"
-// @Param resource body dto.ResourceCreateOpts{spec=map[string]interface{}} true "Resource details" example={"resource_group":"group1","kind":"type1","namespace":"ns1","name":"resource1","shard_id":"default","body":{"key":"value"},"labels":{"env":"prod"}}
-// @Success 201 {object} dto.Resource{spec=map[string]interface{}} "Resource created" example={"id":1,"resource_group":"group1","kind":"type1","namespace":"ns1","name":"resource1","shard_id":"default","body":{"key":"value"},"labels":{"env":"prod"},"created_at":"2025-05-12T00:00:00Z","updated_at":"2025-05-12T00:00:00Z","version":1,"current_version":0}
+// @Param resource body CreateResourceRequest{spec=map[string]interface{}} true "Resource details"
+// @Success 200 {object} dto.Resource{spec=map[string]interface{},status=map[string]interface{}}  "Resource created"
 // @Failure 400 {object} ErrorResponse "Invalid input" example={"error":"Validation failed: shard_id is required"}
 // @Failure 500 {object} ErrorResponse "Server error" example={"error":"Failed to create resource: database error"}
 // @Router /api/v1/groups/{resource_group}/namespaces/{namespace}/kinds/{kind}/resources [post]
 func (h *Handler) createResource(w http.ResponseWriter, r *http.Request) {
-	var req dto.ResourceCreateOpts
-	if err := json.NewDecoder(r.Body).Decode(&req); err != nil {
+	var req CreateResourceRequest
+	if err := jsonIter.NewDecoder(r.Body).Decode(&req); err != nil {
 		http.Error(w, fmt.Sprintf(`{"error":"Invalid JSON: %s"}`, err), http.StatusBadRequest)
 		return
 	}
-	req.ResourceGroup = chi.URLParam(r, "resource_group")
-	req.Kind = chi.URLParam(r, "kind")
-	req.Namespace = chi.URLParam(r, "namespace")
-
-	if err := h.validator.Struct(&req); err != nil {
+	if err := h.validator.Struct(req); err != nil {
 		http.Error(w, fmt.Sprintf(`{"error":"Validation failed: %s"}`, err), http.StatusBadRequest)
 		return
 	}
 
-	resource, err := h.service.Create(r.Context(), req)
+	resourceCreateOpts := &dto.ResourceCreateOpts{
+		ResourceFields: dto.ResourceFields{
+			ResourceID: dto.ResourceID{
+				ResourceGroup: chi.URLParam(r, "resource_group"),
+				Kind:          chi.URLParam(r, "kind"),
+				Namespace:     chi.URLParam(r, "namespace"),
+				Name:          req.Name,
+			},
+			ShardID:     req.ShardID,
+			Labels:      req.Labels,
+			Annotations: req.Annotations,
+		},
+		Spec: req.Spec,
+	}
+
+	resource, err := h.service.Create(r.Context(), resourceCreateOpts)
 	if err != nil {
 		http.Error(w, fmt.Sprintf(`{"error":"Failed to create resource: %s"}`, err), http.StatusInternalServerError)
 		return
@@ -44,5 +64,5 @@ func (h *Handler) createResource(w http.ResponseWriter, r *http.Request) {
 
 	w.Header().Set("Content-Type", "application/json")
 	w.WriteHeader(http.StatusCreated)
-	json.NewEncoder(w).Encode(resource)
+	jsonIter.NewEncoder(w).Encode(resource)
 }
